# CampReservationBot

./: .env.example  .gitignore  README.md  pyproject.toml
cfg/: targets.yaml
logs/: login_not_found_20260222_154652.html  login_not_found_20260222_154722.html  login_not_found_20260222_154752.html  login_not_found_20260222_154822.html  login_not_found_20260222_162856.html  login_not_found_20260222_162926.html  login_not_found_20260222_162956.html  login_not_found_20260222_163026.html  login_not_found_20260222_163056.html  login_not_found_20260222_163126.html  login_not_found_20260222_163319.html
src/camping_bot/: captcha.py  config.py  main.py  models.py  notifier.py  runner.py  scheduler.py  settings.py
src/camping_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/camping_bot/adapters/: base.py  interpark_anseong_adapter.py  mock_adapter.py  registry.py
